Update Supabase URL and key in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -326,8 +326,8 @@
     <script>
         // Configuration
         const API_BASE = 'https://interval-timer-cloud.vercel.app';
-        const SUPABASE_URL = 'https://your-supabase-project.supabase.co'; // Replace with your URL
-        const SUPABASE_KEY = 'your-supabase-anon-key'; // Replace with your key
+        const SUPABASE_URL = 'https://czypepixorbwhskkoscw.supabase.co'; // Replace with your URL
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN6eXBlcGl4b3Jid2hza2tvc2N3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5ODQ5NTMsImV4cCI6MjA4MDU2MDk1M30.D3AT6WUtZ3cX9-V-Uhdi52miIKsjVoNmhvBh6lmNo6A'; // Replace with your key
 
         // Helper: Format time remaining
         function formatTime(seconds) {
